SERVER-66379 $or to $in conversion flawed

(cherry picked from commit 951197b3834d509d7903efa4a66c0e9f79235262)